{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 64,
  "lineage": "0ca5d235-71e0-46f7-0605-45c7e7a76c33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-019715e0d74f695be",
            "arn": "arn:aws:ec2:ap-south-1:686255974968:instance/i-0260e812c92946195",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0260e812c92946195",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05fcaa494cc9d49d1"
              }
            ],
            "primary_network_interface_id": "eni-05fcaa494cc9d49d1",
            "private_dns": "ip-192-168-0-77.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.77",
            "public_ip": "15.207.109.161",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0144509787db21d62",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077c09cd17c092b38",
            "tags": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cce45286895cb18c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "i-0260e812c92946195",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:internet-gateway/igw-05ff644df490f9651",
            "id": "igw-05ff644df490f9651",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "tags": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "vpc_internet_gw"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "vpc_internet_gw"
            },
            "vpc_id": "vpc-0ff60f12ccde55fb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ff644df490f9651",
            "id": "r-rtb-07297d42b1ba559871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-07297d42b1ba55987",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-07297d42b1ba55987"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_gw",
            "aws_route_table.public_route",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:route-table/rtb-0f9f8b12eca0069b9",
            "id": "rtb-0f9f8b12eca0069b9",
            "owner_id": "686255974968",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff60f12ccde55fb0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "rtb-0f9f8b12eca0069b9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:route-table/rtb-07297d42b1ba55987",
            "id": "rtb-07297d42b1ba55987",
            "owner_id": "686255974968",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff60f12ccde55fb0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "rtb-07297d42b1ba55987",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a358b6478a9d8c8d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f9f8b12eca0069b9",
            "subnet_id": "subnet-049a38a15b048a6ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e4c9d1b3c533dfa",
            "region": "ap-south-1",
            "route_table_id": "rtb-07297d42b1ba55987",
            "subnet_id": "subnet-077c09cd17c092b38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group/sg-0cce45286895cb18c",
            "description": "This will allow the ssh access",
            "egress": [],
            "id": "sg-0cce45286895cb18c",
            "ingress": [],
            "name": "ssh_access",
            "name_prefix": "",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "terraform_security_group"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "terraform_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff60f12ccde55fb0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sg-0cce45286895cb18c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:subnet/subnet-049a38a15b048a6ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049a38a15b048a6ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255974968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "Private_Subnet"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "Private_Subnet"
            },
            "vpc_id": "vpc-0ff60f12ccde55fb0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "subnet-049a38a15b048a6ec",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:subnet/subnet-077c09cd17c092b38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077c09cd17c092b38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686255974968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "Public_Subnet"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-0ff60f12ccde55fb0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "subnet-077c09cd17c092b38",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:vpc/vpc-0ff60f12ccde55fb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0e88095704f89f8fd",
            "default_route_table_id": "rtb-04ae32d0f836f0ced",
            "default_security_group_id": "sg-098b8f76ec1e191c4",
            "dhcp_options_id": "dopt-0a43bcb2baa898853",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff60f12ccde55fb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ae32d0f836f0ced",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "tags": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "Terraform_VPC"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Createdat": "Thursday, 26-Feb-26 12:34:43 UTC",
              "Name": "Terraform_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "vpc-0ff60f12ccde55fb0",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group-rule/sgr-0eaff9aff29e4c222",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0eaff9aff29e4c222",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0cce45286895cb18c",
            "security_group_rule_id": "sgr-0eaff9aff29e4c222",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sgr-0eaff9aff29e4c222",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    }
  ]
}